Source/JavaScriptCore/runtime/GenericTypedArrayViewInlines.h
@@ -87,7 +87,9 @@ template<typename Adaptor>
 RefPtr<GenericTypedArrayView<Adaptor>> GenericTypedArrayView<Adaptor>::tryCreate(
     RefPtr<ArrayBuffer>&& buffer, unsigned byteOffset, unsigned length)
 {
-    ASSERT(buffer);
+    if (!buffer)
+        return nullptr;
+    
     if (!ArrayBufferView::verifySubRangeLength(*buffer, byteOffset, length, sizeof(typename Adaptor::Type))
         || !verifyByteOffsetAlignment(byteOffset, sizeof(typename Adaptor::Type))) {
         return nullptr;
