Source/JavaScriptCore/runtime/JSArrayBufferView.cpp
@@ -190,7 +190,7 @@ bool JSArrayBufferView::put(
 ArrayBuffer* JSArrayBufferView::unsharedBuffer()
 {
     ArrayBuffer* result = possiblySharedBuffer();
-    RELEASE_ASSERT(!result->isShared());
+    RELEASE_ASSERT(!result || !result->isShared());
     return result;
 }
     
@@ -205,13 +205,21 @@ void JSArrayBufferView::finalize(JSCell* cell)
 JSArrayBuffer* JSArrayBufferView::unsharedJSBuffer(JSGlobalObject* globalObject)
 {
     VM& vm = globalObject->vm();
-    return vm.m_typedArrayController->toJS(globalObject, this->globalObject(vm), unsharedBuffer());
+    auto scope = DECLARE_THROW_SCOPE(vm);
+    if (ArrayBuffer* buffer = unsharedBuffer())
+        return vm.m_typedArrayController->toJS(globalObject, this->globalObject(vm), buffer);
+    scope.throwException(globalObject, createOutOfMemoryError(globalObject));
+    return nullptr;
 }
 
 JSArrayBuffer* JSArrayBufferView::possiblySharedJSBuffer(JSGlobalObject* globalObject)
 {
     VM& vm = globalObject->vm();
-    return vm.m_typedArrayController->toJS(globalObject, this->globalObject(vm), possiblySharedBuffer());
+    auto scope = DECLARE_THROW_SCOPE(vm);
+    if (ArrayBuffer* buffer = possiblySharedBuffer())
+        return vm.m_typedArrayController->toJS(globalObject, this->globalObject(vm), buffer);
+    scope.throwException(globalObject, createOutOfMemoryError(globalObject));
+    return nullptr;
 }
 
 void JSArrayBufferView::neuter()
@@ -261,29 +269,36 @@ ArrayBuffer* JSArrayBufferView::slowDownAndWasteMemory()
 
     RELEASE_ASSERT(!hasIndexingHeader(vm));
     Structure* structure = this->structure(vm);
-    setButterfly(vm, Butterfly::createOrGrowArrayRight(
-        butterfly(), vm, this, structure,
-        structure->outOfLineCapacity(), false, 0, 0));
 
     RefPtr<ArrayBuffer> buffer;
     unsigned byteLength = m_length * elementSize(type());
 
     switch (m_mode) {
-    case FastTypedArray:
-        buffer = ArrayBuffer::create(vector(), byteLength);
+    case FastTypedArray: {
+        buffer = ArrayBuffer::tryCreate(vector(), byteLength);
+        if (!buffer)
+            return nullptr;
         break;
+    }
 
-    case OversizeTypedArray:
+    case OversizeTypedArray: {
         // FIXME: consider doing something like "subtracting" from extra memory
         // cost, since right now this case will cause the GC to think that we reallocated
         // the whole buffer.
         buffer = ArrayBuffer::createAdopted(vector(), byteLength);
         break;
+    }
 
     default:
         RELEASE_ASSERT_NOT_REACHED();
         break;
     }
+
+    RELEASE_ASSERT(buffer);
+    // Don't create bufferfly until we know we have an ArrayBuffer.
+    setButterfly(vm, Butterfly::createOrGrowArrayRight(
+        butterfly(), vm, this, structure,
+        structure->outOfLineCapacity(), false, 0, 0));
 
     {
         auto locker = holdLock(cellLock());
@@ -302,6 +317,8 @@ ArrayBuffer* JSArrayBufferView::slowDownAndWasteMemory()
 RefPtr<ArrayBufferView> JSArrayBufferView::possiblySharedImpl()
 {
     ArrayBuffer* buffer = possiblySharedBuffer();
+    if (!buffer)
+        return nullptr;
     unsigned byteOffset = this->byteOffset();
     unsigned length = this->length();
     switch (type()) {
